fix chart alignment issue

--- a/src/theme/it-theme.scss
+++ b/src/theme/it-theme.scss
@@ -31,7 +31,7 @@ $enable-rounded: false !default;
 }
 
 .chart-center {
-  @media (min-width: 900px) {
+  @media (min-width: 990px) {
     margin-left: 22.5%
   }
 }
